<resources>
    <string name="app_name">Cripty</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="choose_key">Input your AES key</string>
    <string name="key">AES Key</string>
    <string name="key_word">Key</string>
    <string name="saved_to">Successfully saved to</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="loading">Processing</string>
    <string name="loading_foreground">Please wait</string>
    <string name="about_app">About app</string>
    <string name="source_code">Source code</string>
    <string name="created_by">Created by</string>
    <string name="apostrofe"></string>
    <string name="choose_file">Choose file</string>
    <string name="support_me">Support me</string>
    <string name="settings">Settings</string>
    <string name="choose_default_key">Default key</string>
    <string name="choose_default_key_aes">Default AES key</string>
    <string name="choose_default_key_b64">Default encryption key encoded with Base64</string>
    <string name="set_empty_to_use_default">Set empty to use default value</string>
    <string name="set_empty_to_set_manually">Set empty to choose while encrypting/decrypting</string>
    <string name="file">File</string>
    <string name="en_file_name">Default encrypted file name</string>
    <string name="de_file_name">Default decrypted file name</string>
    <string name="file_name">File name</string>
    <string name="invalid_key_length">Invalid key length</string>
    <string name="overwrite">Overwrite files</string>
    <string name="delete_app_folder">Delete all files in app folder</string>
    <string name="successfully">Successfully!</string>
    <string name="cripty_working">Cripty is working</string>
    <string name="please_wait">Please, wait a little bit</string>
    <string name="dark_theme">Dark theme</string>
    <string name="ui">UI</string>
    <string name="select_def_folder">Default folder</string>
    <string name="choose_key_b64">Encryption key encoded with Base64</string>
    <string name="key_b64">Base64 Key</string>
    <string name="b64">Base64</string>
    <string name="error">Error</string>
</resources>
